--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,12 @@ dependencies {
     implementation 'com.android.tools.build:gradle:7.2.2'
 
     implementation 'com.google.code.gson:gson:2.9.0'
+
+    implementation 'pt.davidafsilva.apple:jkeychain:1.1.0'
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = '11'
+    kotlinOptions.jvmTarget = '1.8'
 }
 
 gradlePlugin {
